--- a/src/main/resources/templates/registarCasa.html
+++ b/src/main/resources/templates/registarCasa.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="ISO-8859-1"></meta>
 <title>Insert title here</title>
-<link href = "css/styles.css" rel = "stylesheet"/></link>
+<link href = "css/styles.css" rel = "stylesheet"/>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"></link>
 </head>
 <body>
