--- a/src/main/resources/templates/registarCasa.html
+++ b/src/main/resources/templates/registarCasa.html
@@ -3,12 +3,54 @@
 <head>
 <meta charset="ISO-8859-1"></meta>
 <title>Insert title here</title>
-<link href = "css/styles.css" rel = "stylesheet"/>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"></link>
+<link href = "css/styles.css" rel = "stylesheet"/>
 </head>
 <body>
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">Alga Works</a>
 </nav>
+
+<div class="mainForm_register">
+	
+<div class="secondFrom_register">
+  <div class="form-group">
+    <label for="exampleFormControlSelect1">Example select</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
+  </div>
+  
+  <div class="form-group">
+    <label for="formGroupExampleInput">Example label</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  </div>
+    <div class="form-group">
+    <label for="formGroupExampleInput">Example label</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  </div>
+    <div class="form-group">
+    <label for="formGroupExampleInput">Example label</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  </div>
+    <div class="form-group">
+    <label for="formGroupExampleInput">Example label</label>
+    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  </div>
+  
+<form>
+  <div class="form-group">
+    <label for="exampleFormControlFile1">Example file input</label>
+    <input type="file" class="form-control-file" id="exampleFormControlFile1"></input>
+  </div>
+</form>
+</div>
+<button type="submit" class="btn btn-primary">Submit</button>
+
+</div>
 </body>
 </html>
