--- a/src/main/resources/templates/registarCasa.html
+++ b/src/main/resources/templates/registarCasa.html
@@ -14,7 +14,10 @@
 <div class="mainForm_register">
 	
 <div class="secondFrom_register">
-  <div class="form-group">
+
+<!--  <div class="container">-->
+	<div class="row"> 
+  <div class="form-group col-sm">
     <label for="exampleFormControlSelect1">Example select</label>
     <select class="form-control" id="exampleFormControlSelect1">
       <option>1</option>
@@ -25,23 +28,27 @@
     </select>
   </div>
   
-  <div class="form-group">
-    <label for="formGroupExampleInput">Example label</label>
-    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
-  </div>
-    <div class="form-group">
-    <label for="formGroupExampleInput">Example label</label>
-    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
-  </div>
-    <div class="form-group">
-    <label for="formGroupExampleInput">Example label</label>
-    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
-  </div>
-    <div class="form-group">
-    <label for="formGroupExampleInput">Example label</label>
-    <input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
-  </div>
+ 	<div class="form-group col-sm">
+    	<label for="formGroupExampleInput">Example label</label>
+    	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  	</div>
   
+    <div class="form-group col-sm">
+    	<label for="formGroupExampleInput">Example label</label>
+    	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  	</div>
+  
+    <div class="form-group col-sm">
+    	<label for="formGroupExampleInput">Example label</label>
+    	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  	</div>
+  
+    <div class="form-group col-sm">
+    	<label for="formGroupExampleInput">Example label</label>
+    	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  	</div>
+  	</div>
+  </div>
 <form>
   <div class="form-group">
     <label for="exampleFormControlFile1">Example file input</label>
@@ -51,6 +58,5 @@
 </div>
 <button type="submit" class="btn btn-primary">Submit</button>
 
-</div>
 </body>
 </html>
