--- a/src/main/resources/templates/procurarCasa.html
+++ b/src/main/resources/templates/procurarCasa.html
@@ -9,6 +9,11 @@
 <body>
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">Alga Works</a>
+  <a class="navbar-brand" href="#">Contactos</a>
+  <a class="navbar-brand" href="#">Suporte</a>
 </nav>
+<div class="mainDiv">
+
+  </div>
 </body>
 </html>
