--- a/src/main/resources/css/main.scss
+++ b/src/main/resources/css/main.scss
@@ -9,10 +9,11 @@
 
 .mainDiv{
 	background-color:#41B3A3;
-	height:450px;
+	height:450px; 
 	text-align:center;
 	padding:144px 0;
-} 
+	box-shadow:rgba(0, 0, 0, 0.35) 0px 5px 15px; 
+}  
 
 .mainForm_register{
 	background-color:#41B3A3;
@@ -25,5 +26,11 @@
 }
 .secondFrom_register{
 	height:100px;
+}
+
+.form-group.file-upload{
+	display:grid;
+	width:210px;
+	margin-bottom:35px;
 }
 
