--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,8 @@
 <body>
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">Alga Works</a>
+  <a class="navbar-brand" href="#">Contactos</a>
+  <a class="navbar-brand" href="#">Suporte</a>
 </nav>
 
   <div class="mainDiv">
