--- a/src/main/resources/templates/registarCasa.html
+++ b/src/main/resources/templates/registarCasa.html
@@ -9,6 +9,8 @@
 <body>
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="#">Alga Works</a>
+  <a class="navbar-brand" href="#">Contactos</a>
+  <a class="navbar-brand" href="#">Suporte</a>
 </nav>
 
 <div class="mainForm_register">
@@ -18,7 +20,7 @@
 <!--  <div class="container">-->
 	<div class="row"> 
   <div class="form-group col-sm">
-    <label for="exampleFormControlSelect1">Example select</label>
+    <label for="exampleFormControlSelect1">Numero de casas de banho</label>
     <select class="form-control" id="exampleFormControlSelect1">
       <option>1</option>
       <option>2</option>
@@ -29,33 +31,37 @@
   </div>
   
  	<div class="form-group col-sm">
-    	<label for="formGroupExampleInput">Example label</label>
+    	<label for="formGroupExampleInput">Localidade</label>
     	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
   	</div>
   
     <div class="form-group col-sm">
-    	<label for="formGroupExampleInput">Example label</label>
+    	<label for="formGroupExampleInput">Tipo de Imovel</label>
     	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
   	</div>
   
     <div class="form-group col-sm">
-    	<label for="formGroupExampleInput">Example label</label>
+    	<label for="formGroupExampleInput">Tipo de negócio</label>
     	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
   	</div>
   
     <div class="form-group col-sm">
-    	<label for="formGroupExampleInput">Example label</label>
+    	<label for="formGroupExampleInput">Preço</label>
+    	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  	</div>
+  	<div class="form-group col-sm">
+    	<label for="formGroupExampleInput">Morada</label>
     	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
   	</div>
   	</div>
   </div>
 <form>
-  <div class="form-group">
-    <label for="exampleFormControlFile1">Example file input</label>
+  <div class="form-group file-upload">
+    <label for="exampleFormControlFile1">Adicionar fotos</label>
     <input type="file" class="form-control-file" id="exampleFormControlFile1"></input>
   </div>
 </form>
-<button type="submit" class="btn btn-primary">Submit</button>
+<button type="submit" class="btn btn-primary">Registar Casa</button>
 </div>
 
 
