--- a/src/main/resources/css/main.scss
+++ b/src/main/resources/css/main.scss
@@ -18,7 +18,8 @@
 .mainForm_register{
 	background-color:#41B3A3;
 	padding:15px 15px;
-	height:450px;
+	height:450px; 
+	box-shadow:rgba(0, 0, 0, 0.35) 0px 5px 15px !important; 
 	
 	.form-group.col-sm{
 		width:250px;
