--- a/src/main/resources/templates/procurarCasa.html
+++ b/src/main/resources/templates/procurarCasa.html
@@ -2,9 +2,10 @@
 <html>
 <head>
 <meta charset="ISO-8859-1"></meta>
+<meta charset="UTF-8"></meta>
 <title>Insert title here</title>
-<link href = "css/styles.css" rel = "stylesheet"/>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous"></link>
+<link href = "css/styles.css" rel = "stylesheet"/>
 </head>
 <body>
 <nav class="navbar navbar-light bg-light">
@@ -12,8 +13,50 @@
   <a class="navbar-brand" href="#">Contactos</a>
   <a class="navbar-brand" href="#">Suporte</a>
 </nav>
-<div class="mainDiv">
 
+<div class="mainForm_register">
+	
+<div class="secondFrom_register">
+
+<!--  <div class="container">-->
+	<div class="row"> 
+  <div class="form-group col-sm">
+    <label for="exampleFormControlSelect1">Numero de casas de banho</label>
+    <select class="form-control" id="exampleFormControlSelect1">
+      <option>1</option>
+      <option>2</option>
+      <option>3</option>
+      <option>4</option>
+      <option>5</option>
+    </select>
   </div>
+  
+ 	<div class="form-group col-sm">
+    	<label for="formGroupExampleInput">Localidade</label>
+    	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  	</div>
+  
+    <div class="form-group col-sm">
+    	<label for="formGroupExampleInput">Tipo de Imovel</label>
+    	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  	</div>
+  
+    <div class="form-group col-sm">
+    	<label for="formGroupExampleInput">Tipo de negócio</label>
+    	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  	</div>
+  
+    <div class="form-group col-sm">
+    	<label for="formGroupExampleInput">Preço</label>
+    	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  	</div>
+  	<div class="form-group col-sm">
+    	<label for="formGroupExampleInput">Morada</label>
+    	<input type="text" class="form-control" id="formGroupExampleInput" placeholder="Example input"></input>
+  	</div>
+  	</div>
+  </div>
+<button type="submit" class="btn btn-primary">Procurar Casa</button>
+</div>
 </body>
 </html>
